[gd_scene load_steps=7 format=3 uid="uid://cnj26pgsifnj0"]

[ext_resource type="Script" uid="uid://qmgcq6tjhfgy" path="res://Scripts/card.gd" id="1_kmalc"]
[ext_resource type="Texture2D" uid="uid://lb8d1uexayog" path="res://Sprites/Effets.png" id="2_kmalc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ksaoi"]
size = Vector2(576, 1096)

[sub_resource type="AtlasTexture" id="AtlasTexture_vajyq"]
atlas = ExtResource("2_kmalc")
region = Rect2(5440, 0, 1360, 2400)

[sub_resource type="AtlasTexture" id="AtlasTexture_08av7"]
atlas = ExtResource("2_kmalc")
region = Rect2(0, 0, 1360, 2400)

[sub_resource type="SpriteFrames" id="SpriteFrames_gvfcw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vajyq")
}],
"loop": false,
"name": &"nothing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_08av7")
}],
"loop": false,
"name": &"surbrillance",
"speed": 5.0
}]

[node name="Card" type="Area2D"]
z_index = 3
collision_mask = 2
script = ExtResource("1_kmalc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ksaoi")

[node name="CardButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -360.0
offset_top = -620.0
offset_right = 360.0
offset_bottom = 620.0

[node name="SurbrillanceAnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gvfcw")
animation = &"nothing"
autoplay = "nothing"

[connection signal="area_entered" from="." to="." method="_on_emplacement_entered"]
[connection signal="area_exited" from="." to="." method="_on_emplacement_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="button_down" from="CardButton" to="." method="_on_card_button_down"]
[connection signal="button_up" from="CardButton" to="." method="_on_card_button_up"]
[connection signal="mouse_entered" from="CardButton" to="." method="_on_card_button_mouse_entered"]
[connection signal="mouse_exited" from="CardButton" to="." method="_on_card_button_mouse_exited"]
